Fix checkbox alignmentin settings

--- a/dash-if-reference-player/src/app/components/setting/setting.component.css
+++ b/dash-if-reference-player/src/app/components/setting/setting.component.css
@@ -66,7 +66,6 @@
 }
 
 #set-accordionPanel .mat-checkbox {
-  width: 100%;
   word-break: break-word !important;
   word-wrap: break-word !important;
 }
